# multi-ocr

./: .gitignore  LICENSE  README.md  batch.py  main.py  ocr.py  pdf_utils.py  pyproject.toml  release.sh  single.py
docs/liteparse/: Markdown-Output.md  library-use.md  ocr-config.md
docs/superpowers/specs/: 2026-07-15-batch-pdf-concurrency-design.md  2026-07-15-batch-processing-design.md  2026-07-15-cli-args-design.md  2026-07-15-concurrency-design.md  2026-07-15-engine-refactor-design.md  2026-07-15-liteparse-engine-design.md  2026-07-15-model-shorthand-design.md  2026-07-15-multi-ocr-design.md  2026-07-15-ollama-engine-design.md  2026-07-15-pdf-progress-design.md  2026-07-16-src-package-restructure-design.md
engines/: __init__.py  base.py  dashscope.py  liteparse.py  ollama.py  siliconflow.py
src/multi_ocr/: __init__.py  batch.py  cli.py  single.py
src/multi_ocr/engines/: __init__.py  base.py  dashscope.py  liteparse.py  ollama.py  siliconflow.py
tests/: 1.txt  2.txt  conftest.py  test_batch.py  test_engines.py  test_ocr.py  test_pdf_utils.py  test_single.py
