[project]
name = "multi-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "liteparse",
    "ollama",
    "openai>=2.45.0",
    "pymupdf>=1.28.0",
    "tqdm>=4.67.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
