[project]
name = "multi-ocr-py"
dynamic = ["version"]
description = "多引擎 OCR 工具包：将 PDF 和图片转换为 Markdown，支持 CLI 全局安装和 SDK 依赖两种使用方式"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Yinnan", email = "im.yinnan@outlook.com" },
]
keywords = ["ocr", "pdf", "markdown", "cli", "vision-language-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.11"
dependencies = [
    "liteparse",
    "ollama",
    "openai>=2.45.0",
    "pymupdf>=1.28.0",
    "tqdm>=4.67.0",
]

[project.urls]
Repository = "https://github.com/BlackBoxRecorder/multi-ocr"

[project.scripts]
multi-ocr = "multi_ocr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_ocr"]

[tool.hatch.version]
path = "src/multi_ocr/__init__.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
